--- a/src/app/components/Sidebar/styles.css
+++ b/src/app/components/Sidebar/styles.css
@@ -23,7 +23,7 @@
   align-items: center;
 }
 
-.sidebar-container ul li a {
+.sidebar-container ul a {
   text-decoration: none;
   color: #c4c4c4;
 }
