--- a/src/app/pages/SignIn/styles.css
+++ b/src/app/pages/SignIn/styles.css
@@ -54,7 +54,23 @@
   color: #fff;
 }
 
-.left a {
+.login-access-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 50px;
+  background-color: #007acc;
+  color: #fff;
+  margin-top: 30px;
+  transition: opacity 0.2s;
+}
+
+.login-access-btn:hover {
+  opacity: 0.8;
+}
+
+.left a.register {
   text-decoration: none;
   color: #000;
   font-size: 20px;
