Toasting when answers right or wrong

--- a/src/app/components/Header/styles.css
+++ b/src/app/components/Header/styles.css
@@ -5,6 +5,9 @@
   align-items: center;
   padding: 15px 60px;
   background-color: #212121;
+  z-index: 1;
+  position: fixed;
+  width: 100%;
 }
 
 .header-container a {
