--- a/src/app/components/Sidebar/styles.css
+++ b/src/app/components/Sidebar/styles.css
@@ -1,9 +1,9 @@
 .sidebar {
   width: 120px;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   flex-direction: column;
-
+  margin-top: 70px;
   align-items: center;
   background-color: #404040;
   margin-right: 30px;
