--- a/src/app/pages/SignIn/styles.css
+++ b/src/app/pages/SignIn/styles.css
@@ -29,7 +29,8 @@
 }
 
 .left input {
-  width: 400px;
+  max-width: 400px;
+  min-width: 400px;
   height: 50px;
   margin-bottom: 16px;
   border-style: none;
