--- a/src/app/pages/SignUp/styles.css
+++ b/src/app/pages/SignUp/styles.css
@@ -30,7 +30,8 @@
 
 .sup-right input,
 .sup-right select {
-  width: 400px;
+  min-width: 400px;
+  max-width: 400px;
   height: 50px;
   margin-bottom: 16px;
   border-style: none;
