--- a/src/app/components/Header/styles.css
+++ b/src/app/components/Header/styles.css
@@ -10,14 +10,14 @@
   width: 100%;
 }
 
-.header-container a {
+.header-container .logo {
   text-decoration: none;
   color: #c4c4c4;
 }
 
 .header-container nav {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1300px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -39,4 +39,14 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.logout {
+  min-width: 100px;
+  background-color: #f9a826;
+  color: #fff;
+  text-align: center;
+  padding: 2px 0;
+  font-weight: bold;
+  cursor: pointer;
 }
