--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,11 @@ a {
 ul {
   list-style: none;
 }
+
+@media (max-width: 500px) {
+  body,
+  #root {
+    background-color: #fff;
+    content: 'ESTE SITE SÓ DEVE SER ACESSADO NO DESKTOP';
+  }
+}
