--- a/src/app/pages/SignIn/styles.css
+++ b/src/app/pages/SignIn/styles.css
@@ -96,3 +96,25 @@
   width: 500px;
   max-width: 500px;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.logo-uninassau {
+  max-width: 200px;
+  margin-right: 30px;
+}
+
+.logo-ladsoft {
+  max-width: 150px;
+}
