--- a/src/app/pages/SignIn/styles.css
+++ b/src/app/pages/SignIn/styles.css
@@ -110,6 +110,11 @@ a {
   width: 100%;
 }
 
+.logo-semana {
+  max-width: 200px;
+  margin-right: 30px;
+}
+
 .logo-uninassau {
   max-width: 200px;
   margin-right: 30px;
