--- a/src/app/pages/SignIn/styles.css
+++ b/src/app/pages/SignIn/styles.css
@@ -15,9 +15,12 @@
   color: #000;
 }
 
-.left h2 {
+.signin-title {
   margin-top: 20px;
-  margin-bottom: 50px;
+}
+
+.left h2 {
+  margin: 20px 0;
 }
 
 .left form {
@@ -25,7 +28,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .left input {
@@ -41,7 +44,6 @@
 .left span {
   font-size: 16px;
   color: #f9a826;
-  align-self: flex-start;
   margin-bottom: 10px;
   font-weight: bold;
 }
@@ -78,7 +80,7 @@
 }
 
 .left p {
-  margin-top: 50px;
+  margin-top: 20px;
   font-size: 16px;
 }
 
@@ -104,6 +106,7 @@ a {
 
 .logos {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
@@ -112,14 +115,18 @@ a {
 
 .logo-semana {
   max-width: 200px;
-  margin-right: 30px;
 }
 
 .logo-uninassau {
   max-width: 200px;
-  margin-right: 30px;
 }
 
 .logo-ladsoft {
   max-width: 150px;
+  margin-right: 15px;
+}
+
+.logo-laftec {
+  max-width: 150px;
+  max-height: 50px;
 }
