--- a/src/app/pages/SignUp/styles.css
+++ b/src/app/pages/SignUp/styles.css
@@ -11,13 +11,13 @@
   justify-content: center;
   align-items: center;
   width: 50%;
-  height: 100%;
+  min-height: 100vh;
   background-color: #eee;
   color: #000;
 }
 
 .sup-right h2 {
-  margin: 10px 0;
+  margin-top: 10px;
 }
 
 .sup-right form {
@@ -25,24 +25,30 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
-.sup-right input,
-.sup-right select {
+.sup-right input {
   min-width: 400px;
   max-width: 400px;
   height: 50px;
   margin-bottom: 16px;
   border-style: none;
   background-color: #fff;
-  padding: 0 40px;
+  padding: 0 20px;
+}
+
+.sup-right .semester-stdid input {
+  min-width: 190px;
+  max-width: 200px;
+  height: 50px;
+  margin-bottom: 16px;
 }
 
 .sup-right span {
   font-size: 16px;
   color: #f9a826;
-  align-self: flex-start;
+
   margin-bottom: 10px;
   font-weight: bold;
 }
@@ -62,14 +68,9 @@
   font-size: 20px;
 }
 
-.sup-right p {
-  margin-top: 50px;
-  font-size: 16px;
-}
-
 .sup-left {
   width: 50%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
